# opt

./: .gitignore  CMakeLists.txt  README.md
includes/: geometry.h  gltf-loader.h  renderer.h  scene.h  wgpu.h
includes/accel/: bvh.h
includes/albedo/: controller.h  entity.h  geometry.h  instance.h  material.h  mesh.h  renderer.h  resource-manager.h  scene.h  wgpu.h
includes/albedo/accel/: bvh-sah-builder.h  bvh-sah-builder.hxx  bvh.h  gpu-accel.h  noop-builder.h
includes/albedo/backend/: bind-group.h  bind-group.hxx  buffer.h  buffer.hxx  object.h  pipeline.h  render-pipeline.h  texture.h
includes/albedo/components/: camera.h  component-structure.h  component-structure.hxx  component.h  light.h  material.h  transform.h
includes/albedo/debug/: scene-debugger.h
includes/albedo/math/: box.h
includes/albedo/utils/: index.h  optional-ref.h  optional-ref.hxx  textures.h
src/: CMakeLists.txt  app.cpp  app.h  controller.cpp  framework.cpp  geometry.cpp  gltf-loader.cpp  instance.cpp  main.cpp  mesh.cpp  renderer.cpp  renderer.hxx  resource-manager.cpp  scene.cpp
src/acceleration/: CMakeLists.txt  bvh-sah-builder.cpp  gpu-accel.cpp  noop-builder.cpp
src/backend/: CMakeLists.txt  pipeline.cpp  render-pipeline.cpp  render-pipeline.h  texture.cpp
src/components/: CMakeLists.txt  light.cpp  material.cpp  transform.cpp
src/debug/: CMakeLists.txt  scene.cpp
src/gpu/: gpu-accel.cpp  gpu-accel.h  ray-intersector.cpp  ray-intersector.h  texture.h
src/plugins/: CMakeLists.txt  gltf-loader.cpp
src/plugins/includes/albedoloader/: gltf-loader.h  tiny_gltf.h
src/shaders/: blitting.frag  blitting.frag.spv  debug.comp  debug.frag  debug.frag.spv  intersection.comp  pathtace.comp  pathtracing.comp  pathtracing.comp.spv  pathtracing.frag  pathtracing.frag.spv  pathtracing.vert
src/utils/: CMakeLists.txt  index.cpp
